apps/applications/home/romm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm
  namespace: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
    spec:
      containers:
        - name: romm
          image: rommapp/romm@sha256:79d2ab75ce6bdb8f0c7b1d8bb33a456566de5470d5d0e451fbc0919cc84679e8
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config-file
              mountPath: /romm/config/config.yml
              subPath: config.yml
            - name: romm-storage
              mountPath: /romm/resources
              subPath: resources
            - name: romm-storage
              mountPath: /romm/library
              subPath: library
            - name: romm-storage
              mountPath: /romm/assets
              subPath: assets
            - name: romm-storage
              mountPath: /romm/config
              subPath: config
            - name: redis-data
              mountPath: /redis-data
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 65534
        fsGroupChangePolicy: Always
      volumes:
        - name: romm-storage
          persistentVolumeClaim:
            claimName: romm-pvc
        - name: redis-data
          emptyDir: {}
        - name: config-file
          configMap:
            name: romm-config
