apps/applications/home/romm/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: romm-ui-route
  namespace: home
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "romm.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: romm-ui
          port: 8080
